--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
 # GEMINI_API_KEY=
-# OPENAI_API_KEY=
-# OPENAI_API_BASE=
+# OPENAI_API_KEY=<your_openai_api_key>
+# OPENAI_API_BASE=<optional_custom_base_url>
